--- a/MISA.WEB01.HCSN/appsettings.json
+++ b/MISA.WEB01.HCSN/appsettings.json
@@ -1,10 +1,25 @@
 {
+  "Jwt": {
+    "Key": "meditrack cham soc suc khoe e3"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AppSettings": {
+    "Token": "This is Token"
+  },
+  "environmentVariables": {
+    "ASPNETCORE_ENVIRONMENT": "Production",
+
+    "JWT_SECRET": "Jwt:Key",
+    "JWT_ISSUER": "Auth"
+  },
+
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySqlConnection": "Server= localhost; Port=3306; Database=meditrack; User Id = root;Password=123456 "
